# recipedia-app/src/main/java/com/recipedia/controller/ReviewController.java
@@ -1,6 +1,5 @@
 package com.recipedia.controller;
 
-import com.recipedia.dto.PageResponse;
 import com.recipedia.dto.ReviewRequest;
 import com.recipedia.dto.ReviewResponse;
 import com.recipedia.service.ReviewService;
@@ -10,6 +9,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -27,15 +28,11 @@ public class ReviewController {
         return ResponseEntity.ok(reviewService.save(request, connectedUser));
     }
 
-    @GetMapping("/recipe/{recipe-id}")
-    public ResponseEntity<PageResponse<ReviewResponse>> findAllReviewsByRecipe(
-            @PathVariable("recipe-id") Long recipeId,
-            @RequestParam(name = "page", defaultValue = "0", required = false) int page,
-            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
-            Authentication connectedUser
+    //TODO lazy load(like youtube comments)?
+    @GetMapping("/{recipe-id}")
+    public ResponseEntity<List<ReviewResponse>> findAllReviewsByRecipe(
+            @PathVariable("recipe-id") Long recipeId
     ) {
-        return ResponseEntity.ok(reviewService.findAllReviewsByRecipe(recipeId, page, size, connectedUser));
+        return ResponseEntity.ok(reviewService.findAllReviewsByRecipe(recipeId));
     }
-
-
 }
