# recipedia-app/src/main/java/com/recipedia/dto/ReviewResponse.java
@@ -13,6 +13,5 @@ public class ReviewResponse {
 
     private Double rate;
     private String comment;
-    private boolean ownFeedback;
-
+    private UserResponse createdBy;
 }
