# recipedia-ui/src/app/services/models/page-response-review-response.ts
@@ -1,13 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import {ReviewResponse} from '../models/review-response';
-
-export interface PageResponseReviewResponse {
-  content?: Array<ReviewResponse>;
-  first?: boolean;
-  last?: boolean;
-  number?: number;
-  size?: number;
-  totalElements?: number;
-  totalPages?: number;
-}
